# hyperaudioset

./: .gitignore  README.md  pyproject.toml
hyperaudioset/: __init__.py
hyperaudioset/configs/: __init__.py  config.yaml
hyperaudioset/configs/criterion/: default.yaml  euclid_negative-sampling.yaml  poincare_negative-sampling.yaml
hyperaudioset/configs/data/: audioset.yaml  default.yaml  medleydb.yaml  openmic2018.yaml  wordnet_mammal.yaml
hyperaudioset/configs/model/: euclid.yaml  poincare.yaml
hyperaudioset/configs/optimizer/: default.yaml  rsgd.yaml  sgd.yaml
hyperaudioset/configs/system/: cpu.yaml  default.yaml  mps.yaml
hyperaudioset/criterion/: __init__.py  negative_sampling.py
hyperaudioset/functional/: __init__.py  hyperbolic.py
hyperaudioset/model/: __init__.py
hyperaudioset/models/: euclid.py  manifold.py  poincare.py
hyperaudioset/optim/: __init__.py  lr_scheduler.py  optimizer.py
hyperaudioset/utils/: __init__.py
hyperaudioset/utils/_github/: __init__.py
hyperaudioset/utils/_hydra/: __init__.py
hyperaudioset/utils/data/: __init__.py  dataset.py  indexer.py
hyperaudioset/utils/data/audioset/: __init__.py  _download.py  dataset.py
recipes/AudioSet/Euclid/: README.md
recipes/AudioSet/Poincare/: README.md
recipes/MedleyDB/Euclid/: README.md
recipes/MedleyDB/Poincare/: README.md
recipes/OpenMIC2018/Euclid/: README.md
recipes/OpenMIC2018/Poincare/: README.md
recipes/WordNet/Euclid/: README.md
recipes/WordNet/Poincare/: README.md
recipes/WordNet/Poincare/local/: train.py  (+1 more)
recipes/_common/local/: train.py  visualize.py
(+10 files in other folders)
